--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,18 @@ cmake_minimum_required(VERSION 3.5)
 
 project(05.homework)
 
-add_executable(random_shuffle random_shuffle.cpp)
-set_target_properties(random_shuffle PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
-
-add_executable(chrono_example chrono_example.cpp)
-set_target_properties(chrono_example PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
-
-add_executable(statistics statistics.cpp)
+add_executable(statistics
+    IStatistics.hpp
+    Max.hpp
+    Min.hpp
+    Mean.hpp
+    Pct.hpp
+    Std.hpp
+    statistics.cpp
+    Max.cpp
+    Min.cpp
+    Mean.cpp
+    Pct.cpp
+    Std.cpp)
 set_target_properties(statistics PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
 
